########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

* Added a script for generating NGINX configuration to let NGINX serve static
  files directly

* Added a way to change the NPROC rlimit in csq_sandbox_options

CHANGED:

* Stopped officially supporting Python 3.8, 3.9, and 3.10.

DEPRECATED:

REMOVED:

FIXED:

SECURITY:

ACCESSIBILITY:

DOCUMENTATION:

VENDORED SOFTWARE:


##################
# Version 19.0.6 #
##################

CHANGED:

* Updated several question types to bold the word "Solution" in answer displays

FIXED:

* Fixed an issue with broken save buttons

* Fixed an issue with incorrect alignment of "multiplechoice" questions'
  answers in browsers other than Firefox


##################
# Version 19.0.5 #
##################

ADDED:

* Added the option to specify solutions to "fileupload" questions
  with Markdown code instead of files

FIXED:

* Fixed a crash when a "checkbox"-style multiplechoice question had no True
  answers

* Fixed a UI issue whereby darkmode preferences were inherited when
  impersonating a student

* Replaced code that used the "imp" module, which has been removed from Python
  3.12

* Updated handling of diagrams so that they respect darkmode
  settings

* Fixed a broken implementation of solutions in "fileupload"
  questions

* Fixed a rare crash with asynchronous checkers not always making
  sure the appropriate directories exist before attempting to write
  log files

* Fixed an issue with password-locked pages that prevented them from
  ever being accessed.

VENDORED SOFTWARE:

* A version of cgi.py from the Python standard library is now included in the
  distribution, since that module will be removed from the standard library in
  3.13 and we depend on it for parsing form data.


##################
# Version 19.0.4 #
##################

FIXED:

* Fixed a regression that caused footnotes not to be displayed


##################