@@ -13,7 +13,7 @@ ADDED:
 
 CHANGED:
 
-* Stopped officially supporting Python 3.8, 3.9, and 3.10.
+* Stopped officially supporting Python 3.8, 3.9, and 3.10
 
 DEPRECATED:
 
@@ -24,6 +24,8 @@ FIXED:
 SECURITY:
 
 ACCESSIBILITY:
+
+* Improved alt text for check/cross images indicating correctness
 
 DOCUMENTATION:
 
